--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	<!-- <script type="text/javascript" src="$WEBAPIS/webapis/webapis.js"></script>-->
 	
 	<!-- angular material -->
-    <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.css">
+    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.css">
 
 	<!-- ngProgress for progress bar of trailer -->
 	<script src="lib/caph/3.1.0/bower_components/ngProgress/ngprogress.js"></script>
